--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
-div{color: blue;
-    padding: 20px;
-    border: 1px solid blue;
-    text-shadow: 2px 4px 4px rgb(170, 0, 0);
-background-color: black;
-
-}
+    div {
+        color: blue;
+        padding: 20px;
+        border: 1px solid blue;
+        text-shadow: 2px 4px 4px rgb(170, 0, 0);
+        background-color: rgba(0, 0, 0, 0.803);
+    }
     
-h2 {font-style: italic;}
-
-img {border-radius: 100px;}
-
-li {margin: 10px;
-font-style: italic;}
-
-html {
-    background: url( https://www.theverge.com/21302888/cyberpunk-2077-preview-demo-hands-on-ps4-xbox-stadia-cd-projekt-red-impressions   );
-
-}
+    h2 {
+        font-style: italic;
+    }
+    
+    img {
+        border-radius: 100px;
+    }
+    
+    li {
+        margin: 10px;
+        font-style: italic;
+    }
