--- a/style.css
+++ b/style.css
@@ -11,10 +11,16 @@
     }
     
     img {
-        border-radius: 50px;
+        border-radius: 510px;
     }
     
     li {
         margin: 10px;
         font-style: italic;
+    }
+    body {
+        background-image: url('https://cdn.vox-cdn.com/thumbor/2webHreBN1FVME8r13RUiWkCgvw=/0x0:2160x1215/1820x1213/filters:focal(923x317:1267x661):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71333676/highlights_2_1080_2x_c11e10b5.0.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
     }
