--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
         margin: 10px;
         font-style: italic;
     }
+<!-- TO add back ground img oto background add the following so it doesnt repeat and its fixed to the page.-->
     body {
         background-image: url('https://cdn.vox-cdn.com/thumbor/2webHreBN1FVME8r13RUiWkCgvw=/0x0:2160x1215/1820x1213/filters:focal(923x317:1267x661):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/71333676/highlights_2_1080_2x_c11e10b5.0.jpg');
         background-repeat: no-repeat;
